[package]
name = "bevy_ecss"
version = "0.5.0"
edition = "2021"
categories = ["game-development", "gui", "web-programming"]
description = "Allows using a subset of CSS to interact with Bevy ECS"
exclude = [".github/"]
keywords = ["css", "bevy", "style", "theme", "ui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/afonsolage/bevy_ecss"

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
] }
cssparser = "0.29"
smallvec = { version = "1.11", features = ["serde", "union", "const_generics"] }
thiserror = "1.0.50"

[dev-dependencies]
bevy = { version = "0.12", features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
    "file_watcher",
] }
bevy_editor_pls = "0.6"

[[example]]
name = "simple_ui"
path = "examples/simple_ui.rs"

[[example]]
name = "hot_reload"
path = "examples/hot_reload.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "theme"
path = "examples/theme.rs"

[[example]]
name = "alpha"
path = "examples/alpha.rs"
